--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,40 @@
-asgiref==3.3.4
+appdirs==1.4.4
+asgiref @ file:///tmp/build/80754af9/asgiref_1617740417847/work
+astroid==2.5.1
+bcrypt==3.2.0
+black==21.6b0
 certifi==2020.12.5
-Django==3.2.2
-django-cors-headers==3.7.0
-mysqlclient==2.0.3
-pytz==2021.1
-sqlparse==0.4.1
+cffi==1.14.5
+chardet==4.0.0
+click==8.0.1
+Django==3.2.4
+django-cors-headers @ file:///home/conda/feedstock_root/build_artifacts/django-cors-headers_1618338117247/work
+django-debug-toolbar==3.2.1
+django-extensions==3.1.3
+django-phone-field==1.8.1
+djangorestframework==3.12.4
+gunicorn==20.1.0
+idna==2.10
+isort==5.7.0
+lazy-object-proxy==1.5.2
+mccabe==0.6.1
+mypy-extensions==0.4.3
+mysqlclient @ file:///tmp/build/80754af9/mysqlclient_1609786120714/work
+numpy==1.20.3
+pandas==1.2.4
+pathspec==0.8.1
+psycopg2 @ file:///tmp/build/80754af9/psycopg2_1612298595717/work
+pycparser==2.20
+Pygments==2.9.0
+PyJWT==2.1.0
+pylint==2.7.2
+python-dateutil==2.8.1
+python-decouple==3.4
+pytz @ file:///tmp/build/80754af9/pytz_1612215392582/work
+regex==2021.4.4
+requests==2.25.1
+six==1.16.0
+sqlparse @ file:///tmp/build/80754af9/sqlparse_1602184451250/work
+toml==0.10.2
+urllib3==1.26.5
+wrapt==1.12.1
